welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
	var vacation:Boolean 
            ^sleepIn:3: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
	var weekday:Boolean
            ^sleepIn:8: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if (vacation==false && weekday==false){
               ^